--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yummy Food App</title>  <!-- "Yummy Food App" is Tab heading.....Tab i google (not screen heading) -->
+    <title>🍳 Yummy Food App</title>  <!-- "Yummy Food App" is Tab heading.....Tab i google (not screen heading) -->
 </head>
 
 <body>
